<resources>
    <string name="app_name">Learn Khasi</string>
    <string name="title_home">Home</string>
    <string name="title_learn">Learn</string>
    <string name="title_words">Words</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_sentences">Sentences</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_fragment">This is also a blank fragment</string>
    <string name="blank_fragment_2">Blank fragment</string>
    <string name="welcome_fragment">Sign In to your account</string>
    <string name="web_client_id">1002278185551-04t4dq9kk6vbtnc2q9bdporu1d4qr847.apps.googleusercontent.com</string>
    <string name="welcome">Welcome to the Learn Khasi App</string>
    <string name="view_all">VIEW ALL</string>
    <string name="add_translation">Add Translation</string>
    <string name="edit_translation">Update Translation</string>
    <string name="eng">ENG</string>
    <string name="kha">KHA</string>
    <string name="action_search">Search</string>
    <string name="action_fav">Add Favorite</string>
    <string name="action_share">Share</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="donate">Donate</string>
    <string name="notifications">Notifications</string>
    <string name="enter_your_translation">Enter Your Translation</string>
    <string name="record_audio_clip_for_sentence">Record audio clip for sentence</string>
    <string name="image">image</string>
    <string name="enter_word_translation">Enter Word Translation</string>
    <string name="enter_the_word">Enter the word*</string>
    <string name="part_of_speech">Part of Speech</string>
    <string name="enter_the_english_meaning_optional">Enter the english meaning (Optional)</string>
    <string name="enter_the_khasi_meaning_optional">Enter the khasi meaning (Optional)</string>
    <string name="i_want_to_learn_khasi">🎓 I WANT TO LEARN KHASI</string>
    <string name="i_know_how_to_speak_khasi">🗣 I KNOW HOW TO SPEAK KHASI</string>
    <string name="i_know_how_to_read_khasi">📖 I KNOW HOW TO READ KHASI</string>
    <string name="i_know_how_to_write_in_khasi">✍️ I KNOW HOW TO WRITE IN KHASI</string>
    <string name="question_1_of_2">Question 1 of 2</string>
    <string name="next">Next</string>
    <string name="tell_us_something_about_you">Tell us something about you:</string>
    <string name="q_1_do_you_know_khasi">Q 1. Do you know Khasi?</string>
    <string name="q_2_what_languages_do_you_know">Q 2. What languages do you know?</string>
    <string name="i_know_english">😌 I KNOW ENGLISH</string>
    <string name="i_know_garo">😌 I KNOW GARO</string>
    <string name="i_know_hindi">😌 I KNOW HINDI</string>
    <string name="question_2_of_2">Question 2 of 2</string>
    <string name="view_khasi_letters">View Khasi Letters</string>
    <string name="listen_to_khasi_letters_pronunciation">Listen To Khasi Letters Pronunciation</string>
    <string name="lesson_2_english_khasi_words">Lesson 2: English-Khasi Words</string>
    <string name="lesson_1_khasi_letters">Lesson 1: Khasi Letters</string>
    <string name="view_3_letters_english_words">View 3 Letters English Words</string>
    <string name="view_4_letters_english_words">View 4 Letters English Words</string>
    <string name="lesson_3_english_khasi_sentences">Lesson 3: English-Khasi Sentences</string>
    <string name="view_english_khasi_greetings">View English-Khasi greetings</string>
    <string name="view_english_khasi_conversations">View English-Khasi Conversations</string>
    <string name="view_english_khasi_direction_sentences">View English-Khasi Direction Sentences</string>
    <string name="activity_favorite_word_favWordTextView_text">You have not added any favorite words yet</string>
    <string name="activity_lesson_letters_textView1_text">Capital Letters | Dak Heh</string>
    <string name="activity_lesson_letters_textView2_text">A B K D E G Ng H I Ï J L M N Ñ O P R S T U W Y</string>
    <string name="activity_lesson_letters_textView3_text">Small Letters | Dak Rit</string>
    <string name="activity_lesson_letters_textView4_text">a b k d e g ng h i ï j l m n ñ o p r s t u w y</string>
    <string name="activity_lesson_letters_displayLetter_text">A a</string>
    <string name="activity_lesson_letters_letterA_text">A a</string>
    <string name="activity_lesson_letters_letterB_text">B b</string>
    <string name="activity_lesson_letters_letterK_text">K k</string>
    <string name="activity_lesson_letters_letterD_text">D d</string>
    <string name="activity_lesson_letters_letterE_text">E e</string>
    <string name="activity_lesson_letters_letterG_text">G g</string>
    <string name="activity_lesson_letters_letterNg_text">Ng ng</string>
    <string name="activity_lesson_letters_letterH_text">H h</string>
    <string name="activity_lesson_letters_letterI_text">I i</string>
    <string name="activity_lesson_letters_letterII_text">Ï ï</string>
    <string name="activity_lesson_letters_letterJ_text">J j</string>
    <string name="activity_lesson_letters_letterL_text">L l</string>
    <string name="activity_lesson_letters_letterM_text">M m</string>
    <string name="activity_lesson_letters_letterN_text">N n</string>
    <string name="activity_lesson_letters_letterNN_text">Ñ ñ</string>
    <string name="activity_lesson_letters_letterO_text">O o</string>
    <string name="activity_lesson_letters_letterP_text">P p</string>
    <string name="activity_lesson_letters_letterR_text">R r</string>
    <string name="activity_lesson_letters_letterS_text">S s</string>
    <string name="activity_lesson_letters_letterT_text">T t</string>
    <string name="activity_lesson_letters_letterU_text">U u</string>
    <string name="activity_lesson_letters_letterW_text">W w</string>
    <string name="activity_lesson_letters_letterY_text">Y y</string>
    <string name="activity_sentence_search_sentenceSearch_text">Searching for </string>
    <string name="activity_sentence_search_askBtn_text">Ask</string>
    <string name="activity_sentence_search_loginPlease_text">Login to ask</string>
    <string name="activity_sentence_search_noItems_text">&#128524;&#128524; No Content Loaded &#128524;&#128524;</string>
    <string name="activity_sentence_view_userName_text">Added by: Sngur</string>
    <string name="activity_sentence_view_fromSentence_text">How are you?</string>
    <string name="activity_sentence_view_fromSentenceLanguage_text">ENG</string>
    <string name="activity_sentence_view_category_text">Category:</string>
    <string name="activity_sentence_view_noOfVotes_text">0</string>
    <string name="activity_sentence_view_toSentenceTitle_text">Khasi Sentences:</string>
    <string name="activity_sentence_view_noKhasiSentences_text">No Sentences added yet.</string>
    <string name="activity_sentence_view_toGaroSentenceTitle_text">Garo Sentences:</string>
    <string name="activity_sentence_view_noGaroSentences_text">No Sentences added yet.</string>
    <string name="activity_sentence_view_toHindiSentenceTitle_text">Hindi Sentences:</string>
    <string name="activity_sentence_view_noHindiSentences_text">No Sentences added yet.</string>
    <string name="activity_word_search_wordSearch_text">Searching for </string>
    <string name="activity_word_search_askBtn_text">Ask</string>
    <string name="activity_word_search_loginPlease_text">Login to ask</string>
    <string name="activity_word_search_noItems_text">&#128524;&#128524; No words loaded yet. \nPlease try searching online &#128524;&#128524;</string>
    <string name="activity_word_view_fromWordLanguage_text">ENG</string>
    <string name="activity_word_view_fromWord_text">Dog</string>
    <string name="activity_word_view_wordTypeFromWord_text">Noun</string>
    <string name="activity_word_view_userNameFromWord_text">Added by: Sngur</string>
    <string name="activity_word_view_noOfVotesFromWord_text">0</string>
    <string name="activity_word_view_toWordLanguage_text">KHA</string>
    <string name="activity_word_view_toWord_text">Ksew</string>
    <string name="activity_word_view_wordTypeToWord_text">Noun</string>
    <string name="activity_word_view_userNameToWord_text">Added by: Sngur</string>
    <string name="activity_word_view_noOfVotesToWord_text">0</string>
    <string name="activity_word_view_fromWordMeaning_text"/>
    <string name="activity_word_view_toWordsTitle_text">Similar Khasi Words:</string>
    <string name="dialog_layout_answer_translatedSentence_text"/>
    <string name="dialog_layout_answer_recording_text">Recording</string>
    <string name="dialog_layout_translated_word_translatedWord_text"/>
    <string name="dialog_layout_translated_word_englishMeaning_text"/>
    <string name="dialog_layout_translated_word_khasiMeaning_text"/>
    <string name="dialog_layout_translated_word_recording_text">Recording</string>
    <string name="fragment_home_textView_text">Currently we have</string>
    <string name="fragment_home_noOfUsers_text">0 Registered Users</string>
    <string name="fragment_home_noOfLessons_text">0 Lessons</string>
    <string name="fragment_home_noOfKhasiWords_text">0 Khasi Words</string>
    <string name="fragment_home_noOfEnglishWords_text">0 English words</string>
    <string name="fragment_home_noOfKhasiSentences_text">0 Sentences translated by users like you</string>
    <string name="fragment_home_favorites_text">0 favorite words</string>
    <string name="fragment_home_viewFavWords_text">View favorite words</string>
    <string name="fragment_home_editorsText_text">View our Editors</string>
    <string name="fragment_login_skipSignin_text">Skip Login</string>
    <string name="fragment_profile_email_text">email</string>
    <string name="fragment_profile_badge_text">Badge:</string>
    <string name="fragment_profile_level_text">Knows:</string>
    <string name="fragment_profile_userPoints_text">0 Points</string>
    <string name="fragment_profile_userLevel_text">Level 1</string>
    <string name="fragment_profile_signOut_text">Sign Out</string>
    <string name="fragment_profile_donate_text">DONATE</string>
    <string name="fragment_sentences_sentenceSearchTitle_text">How do you say it in Khasi?</string>
    <string name="fragment_sentences_fromLang_text">English</string>
    <string name="fragment_sentences_toLang_text">Khasi</string>
    <string name="fragment_sentences_sentenceHint_hint">Search English Sentence</string>
    <string name="fragment_sentences_searchBtn_text">Search Online</string>
    <string name="fragment_sentences_latestSentencesText_text">Latest Sentences</string>
    <string name="fragment_welcome_yesBtn_text">Yes</string>
    <string name="fragment_welcome_noBtn_text">No</string>
    <string name="fragment_words_wordSearchTitle_text">What is the Khasi Word for</string>
    <string name="fragment_words_fromLang_text">English</string>
    <string name="fragment_words_toLang_text">Khasi</string>
    <string name="fragment_words_wordInput_hint">Enter English Word</string>
    <string name="fragment_words_searchBtn_text">Search Online</string>
    <string name="fragment_words_latestWordsText_text">Latest Words</string>
    <string name="fragment_words_viewAllWords_text">View All</string>
    <string name="recycler_item_sentence_list_fromSentence_text">How are you?</string>
    <string name="recycler_item_sentence_list_category_text">Category: </string>
    <string name="recycler_item_sentence_list_isTranslated_text">Not answered</string>
    <string name="recycler_item_sentence_list_userName_text">Added by: </string>
    <string name="recycler_item_translated_sentence_translatedSentence_text">Phi long kumno?</string>
    <string name="recycler_item_translated_sentence_userName_text">Added by: Sngur</string>
</resources>