<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/ic_baseline_text_format"
        android:title="@string/title_learn" />

    <item
        android:id="@+id/navigation_words"
        android:icon="@drawable/ic_baseline_chat_bubble"
        android:title="@string/title_words" />

    <item
        android:id="@+id/navigation_sentences"
        android:icon="@drawable/ic_baseline_question_answer"
        android:title="@string/title_sentences" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle"
        android:title="@string/title_profile" />


</menu>