<?xml version="1.0" encoding="utf-8" standalone="no"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:padding="@dimen/_16sdp">
            <TextView android:id="@+id/dialogTitle" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/enter_word_translation" android:textAlignment="center" android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
            <com.google.android.material.textfield.TextInputLayout android:hint="@string/enter_the_word" android:id="@+id/translatedWordHint" android:layout_height="wrap_content" android:layout_width="match_parent">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/translatedWord" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_width="match_parent" android:maxLines="1" android:text="@string/dialog_layout_translated_word_translatedWord_text" style="@style/MediumText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:gravity="center" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/part_of_speech" style="@style/MediumText"/>
            <Spinner android:id="@+id/translatedWordType" android:layoutMode="opticalBounds" android:layout_height="wrap_content" android:layout_width="match_parent" android:spinnerMode="dialog"/>
            <com.google.android.material.textfield.TextInputLayout android:hint="@string/enter_the_english_meaning_optional" android:id="@+id/englishMeaningHint" android:layout_height="wrap_content" android:layout_width="match_parent">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/englishMeaning" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_width="match_parent" android:maxLines="1" android:text="@string/dialog_layout_translated_word_englishMeaning_text" style="@style/MediumText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:hint="@string/enter_the_khasi_meaning_optional" android:id="@+id/khasiMeaningHint" android:layout_height="wrap_content" android:layout_width="match_parent">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/khasiMeaning" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_width="match_parent" android:maxLines="1" android:text="@string/dialog_layout_translated_word_khasiMeaning_text" style="@style/MediumText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout android:id="@+id/bigLevel" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Record audio clip for the word" android:textAlignment="center" style="@style/SmallText"/>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
                <ImageButton android:backgroundTint="@color/colorRed" android:contentDescription="@string/image" android:id="@+id/record" android:layout_height="@dimen/_40sdp" android:layout_width="@dimen/_40sdp" android:src="@drawable/ic_baseline_fiber_manual_record_24"/>
                <ImageButton android:backgroundTint="@color/colorRed" android:contentDescription="@string/image" android:id="@+id/pause" android:layout_height="@dimen/_40sdp" android:layout_width="@dimen/_40sdp" android:src="@drawable/ic_baseline_pause_24" android:visibility="gone"/>
                <TextView android:id="@+id/recording" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/_5sdp" android:layout_width="wrap_content" android:text="@string/dialog_layout_translated_word_recording_text" android:textColor="@color/colorRed" android:visibility="invisible"/>
                <ImageButton android:backgroundTint="@color/colorAccent" android:contentDescription="@string/image" android:id="@+id/play" android:layout_height="@dimen/_40sdp" android:layout_width="@dimen/_40sdp" android:src="@drawable/ic_baseline_volume_up_24" tools:targetApi="lollipop"/>
            </LinearLayout>
            </LinearLayout>
            <Button android:backgroundTint="@color/colorAccent" android:id="@+id/buttonAnswer" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:layout_width="match_parent" android:text="@string/add_translation" android:textColor="#FFF" tools:targetApi="lollipop"/>
        </LinearLayout>

</ScrollView>
