<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sngur.learnkhasi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.sngur.learnkhasi.ui.dashboard.DashboardFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_words"
        android:name="com.sngur.learnkhasi.ui.fragments.WordsFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_words" />

    <fragment
        android:id="@+id/navigation_sentences"
        android:name="com.sngur.learnkhasi.ui.fragments.SentencesFragment"
        android:label="@string/title_sentences"
        tools:layout="@layout/fragment_sentences" >
        <action
            android:id="@+id/action_navigation_sentences_self"
            app:destination="@id/navigation_sentences" />
    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:name="com.sngur.learnkhasi.ui.notifications.NotificationsFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notifications" />-->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sngur.learnkhasi.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>