<?xml version="1.0" encoding="utf-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_margin="@dimen/_15sdp" android:layout_width="match_parent" android:orientation="vertical" tools:context=".ui.welcome.WelcomeFragment2">

    <LinearLayout android:gravity="start" android:id="@+id/linearLayout" android:layout_gravity="start" android:layout_height="wrap_content" android:layout_margin="@dimen/_10sdp" android:layout_marginEnd="@dimen/_13sdp" android:layout_marginStart="@dimen/_13sdp" android:layout_width="match_parent" android:orientation="horizontal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">

        <ImageView android:contentDescription="@string/image" android:gravity="center" android:layout_gravity="center" android:layout_height="@dimen/_40sdp" android:layout_width="@dimen/_40sdp" android:src="@drawable/logo"/>

        <TextView android:gravity="center" android:layout_gravity="center" android:layout_height="match_parent" android:layout_marginStart="@dimen/_5sdp" android:layout_width="wrap_content" android:text="@string/app_name" style="@style/LargeText"/>
    </LinearLayout>
    <LinearLayout android:gravity="start" android:id="@+id/linearLayout2" android:layout_gravity="start" android:layout_height="@dimen/_5sdp" android:layout_marginBottom="@dimen/_10sdp" android:layout_marginTop="@dimen/_40sdp" android:layout_width="match_parent" android:orientation="horizontal" app:layout_constraintBaseline_toBaselineOf="@id/linearLayout" app:layout_constraintBottom_toBottomOf="@+id/linearLayout">
        <LinearLayout android:background="@color/colorAccent" android:layout_height="match_parent" android:layout_weight="2" android:layout_width="wrap_content" tools:targetApi="lollipop"/>
        <LinearLayout android:background="@color/colorGray" android:backgroundTint="@color/colorGray" android:layout_height="match_parent" android:layout_weight="1" android:layout_width="wrap_content" tools:targetApi="lollipop"/>
    </LinearLayout>

    <TextView android:fontFamily="serif" android:gravity="start" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_width="match_parent" android:text="@string/tell_us_something_about_you" app:layout_constraintTop_toBottomOf="@+id/linearLayout" style="@style/MediumText"/>

    <TextView android:fontFamily="serif" android:gravity="start" android:id="@+id/textView2" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_width="match_parent" android:text="@string/q_2_what_languages_do_you_know" app:layout_constraintTop_toBottomOf="@+id/textView1" style="@style/MediumText"/>



        <CheckBox android:background="@drawable/radiobackground" android:button="@drawable/radiobackground" android:id="@+id/english" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_width="match_parent" android:padding="@dimen/_10sdp" android:text="@string/i_know_english" android:textSize="@dimen/_14sdp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <CheckBox android:background="@drawable/radiobackground" android:button="@drawable/radiobackground" android:id="@+id/garo" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_width="match_parent" android:padding="@dimen/_10sdp" android:text="@string/i_know_garo" android:textSize="@dimen/_14sdp" app:layout_constraintTop_toBottomOf="@+id/english"/>

        <CheckBox android:background="@drawable/radiobackground" android:button="@drawable/radiobackground" android:id="@+id/hindi" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_width="match_parent" android:padding="@dimen/_10sdp" android:text="@string/i_know_hindi" android:textSize="@dimen/_14sdp" app:layout_constraintTop_toBottomOf="@+id/garo"/>


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" app:layout_constraintBottom_toBottomOf="parent">
        <TextView android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:layout_weight="1" android:layout_width="wrap_content" android:text="@string/question_2_of_2"/>
        <Button android:backgroundTint="@color/colorAccent" android:id="@+id/nextBtn" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:layout_weight="1" android:layout_width="wrap_content" android:text="@string/next" android:textColor="@color/colorWhite" tools:targetApi="lollipop"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
